--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
       <!-- flecha abajo -->
       <div class="flecha__abajo">
         <a href="#dividida">
+          <i class="fa-solid fa-computer-mouse"></i>
           <i class="fa-solid fa-angle-down"></i>
         </a>
       </div>
@@ -193,7 +194,7 @@
     </section>
 
     <!-- Pantalla dividida derecha -->
-    <section class="dividida__right" id="dividida">
+    <section class="dividida__right">
       <!-- derecha -->
 
       <!-- contenedor derecha nuestros pastores -->
