--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <section class="dividida__left" id="dividida">
       <!-- izquierda -->
       <div class="left__textoDos" data-aos="fade-left">
-        <h2 class="left__titulo--dos">Nosotros</h2>
+        <h2 class="left__titulo--dos" id="dividida">Nosotros</h2>
         <h4 class="left__tituloSub--dos">Tristán Suárez ✋🤚</h4>
         <p class="left__parrafo--dos">
           Cada persona que llega a la comunidad es desafiada a entregarse a Jesús y dejar que Él sea su Señor.
