--- a/index.html
+++ b/index.html
@@ -156,10 +156,7 @@
       </div>
       <!-- flecha abajo -->
       <div class="flecha__abajo">
-        <a href="#dividida">
-          <i class="fa-solid fa-computer-mouse"></i>
-          <i class="fa-solid fa-angle-down"></i>
-        </a>
+        <a href="#dividida">Scroll down<img src="img/scroll.png" alt=""></a>
       </div>
 
     </article>
@@ -170,7 +167,7 @@
     <section class="dividida__left" id="dividida">
       <!-- izquierda -->
       <div class="left__textoDos" data-aos="fade-left">
-        <h2 class="left__titulo--dos" id="dividida">Nosotros</h2>
+        <h2 class="left__titulo--dos">Nosotros</h2>
         <h4 class="left__tituloSub--dos">Tristán Suárez ✋🤚</h4>
         <p class="left__parrafo--dos">
           Cada persona que llega a la comunidad es desafiada a entregarse a Jesús y dejar que Él sea su Señor.
@@ -233,32 +230,12 @@
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo">
           Una Iglesia que abrigue a todos los que se acerquen a ella con un fuerte y anifiesto interés en el área
-          social. <br>
-          Una Iglesia formadora de líderes, que bendiga al pueblo de Dios nacional e internacional. <br>
-          Una Iglesia fundamentada en el estudio de la Palabra de Dios. <br>
-          Una Iglesia abierta a todos los dones espirituales, en armonía y obediencia a la Palabra de Dios. <br>
-          Una Iglesia abierta a compartir la Palabra, con líderes de otras líneas teológicas, disfrutando de la comunión
-          y respetando nuestras diferencias. <br>
-          Una Iglesia auxiliadora de otras congregaciones en crisis o con dificultades. <br>
-          Una Iglesia con un fuerte énfasis en la adoración a Dios. <br>
-          Una Iglesia con ministerios centrales funcionando a pleno, reuniendo en ellos el modelo del Ministerio de
+          social, una Iglesia formadora de líderes, que bendiga al pueblo de Dios nacional e internacional, una Iglesia fundamentada en el estudio de la Palabra de Dios, una Iglesia abierta a todos los dones espirituales, en armonía y obediencia a la Palabra de Dios, Una Iglesia abierta a compartir la Palabra, con líderes de otras líneas teológicas, disfrutando de la comunión
+          y respetando nuestras diferencias, una Iglesia auxiliadora de otras congregaciones en crisis o con dificultades, una Iglesia con un fuerte énfasis en la adoración a Dios, una Iglesia con ministerios centrales funcionando a pleno, reuniendo en ellos el modelo del Ministerio de
           Jesucristo (Evangelismo, Incorporación, Calidad de Vida, Adoración, Enseñanza, Obra Social, Administración y
           Finanzas). <br>
-          Una Iglesia con un pleno desarrollo de las edades para una pastoral cercana (de niños a abuelos). <br>
-          Una Iglesia con un liderazgo de primera línea "de amigos en Cristo", que se conocen profundamente, dispuestos
-          a sostenerse entre ellos en los momentos más dificiles, que trabajan con un verdadero pacto de amor, sin
-          buscar lo suyo propio, sin egoismos, teniendo como base la transparencia de sus acciones e inquietudes y bajo
-          la cobertura del Espíritu Santo, en un marco de respeto y perdón. <br>
-          Una Iglesia con una economia clara y finanzas transparentes, abierta a cualquier área del liderazgo
-          comprometido, para evitar sospechas y disfrutar del crecimiento que Dios no da. <br>
-          Una Iglesia con un llamado a las misiones locales e internacionales, con el anhelo prioritario de plantar
-          iglesias en cada ciudad donde Dios lo muestre y confirme. <br>
-          Una Iglesia que predica, proclama y trabaja para la verdadera unidad del Cuerpo de Cristo, en armonía con
-          iglesias hermanas. <br>
-          Una Iglesia de pacto, defensora de la comunión entre los hermanos, declarando como único adversario el diablo.
-          <br>
-          Una Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo
-          que Él juzgará las intensiones de nuestro corazón. <br>
+          Una Iglesia con un pleno desarrollo de las edades para una pastoral cercana (de niños a abuelos), una Iglesia con un liderazgo de primera línea "de amigos en Cristo", que se conocen profundamente, dispuestosma sostenerse entre ellos en los momentos más dificiles, que trabajan con un verdadero pacto de amor, sin buscar lo suyo propio, sin egoismos, teniendo como base la transparencia de sus acciones e inquietudes y bajo
+          la cobertura del Espíritu Santo, en un marco de respeto y perdón, una Iglesia con una economia clara y finanzas transparentes, abierta a cualquier área del liderazgo comprometido, para evitar sospechas y disfrutar del crecimiento que Dios no da, una Iglesia con un llamado a las misiones locales e internacionales, con el anhelo prioritario de plantar iglesias en cada ciudad donde Dios lo muestre y confirme, una Iglesia que predica, proclama y trabaja para la verdadera unidad del Cuerpo de Cristo, en armonía con iglesias hermanas, una Iglesia de pacto, defensora de la comunión entre los hermanos, declarando como único adversario el diaUna Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo que Él juzgará las intensiones de nuestro corazón. <br>
           <br>
           <strong>Dios nos bendiga!</strong>
 
