--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
 
   <!--Preloader-->
   <div class="loader__contenedor">
-    <div class="loader__imagen">
-      <img src="img/Logo1.jpg" alt="">
-    </div>
-
     <div class="loader__texto">
-      <span>El Encuentro - Tristán Suárez</span>
+      <span>EL LUGAR DE TU ENCUENTRO CON DIOS!</span>
     </div>
   </div>
 
