fade flip mision

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
     <!-- Pantalla dividida izquierda -->
     <section class="dividida__left" id="dividida">
       <!-- izquierda -->
-      <div class="left__textoDos" data-aos="fade-left">
+      <div class="left__textoDos" >
         <h2 class="left__titulo--dos">Nosotros</h2>
         <h4 class="left__tituloSub--dos">Tristán Suárez ✋🤚</h4>
-        <p class="left__parrafo--dos">
+        <p class="left__parrafo--dos" data-aos="fade-left">
           Cada persona que llega a la comunidad es desafiada a entregarse a Jesús y dejar que Él sea su Señor.
           Esto solo es posible por lo que Dios hizo con el hombre a través de Jesús. Nuestro nuevo nacimiento viene por
           un pacto.
@@ -195,9 +195,9 @@
         <p class="right__frase">Pr. Javier Corsi | "Me rindo a su voluntad para ganar"</p>
       </div>
 
-      <div class="right__textoDos" data-aos="fade-right">
+      <div class="right__textoDos">
 
-        <p class="right__parrafo--dos">
+        <p class="right__parrafo--dos" data-aos="fade-right">
           Dios se ha desbordado en su expresión de amor y lo ha extendido , a la formación de una familia, un cuerpo,
           su iglesia, que nace por mediación de Jesucristo en la nueva alianza (1 P 2, 4-10) y que es el único capaz
           de acabar con todo otro tipo de pactos que se han hecho.
@@ -224,7 +224,7 @@
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">La Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
-        <p class="mision__parrafo">
+        <p class="mision__parrafo" data-aos="flip-left">
           Una Iglesia que abrigue a todos los que se acerquen a ella con un fuerte y anifiesto interés en el área
           social, una Iglesia formadora de líderes, que bendiga al pueblo de Dios nacional e internacional, una Iglesia
           fundamentada en el estudio de la Palabra de Dios, una Iglesia abierta a todos los dones espirituales, en
