scroll-top nosotros

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <ul class="navbar__item">
         <li class="navbar__link navbar__link--activo"> <a href="#header">inicio</a> </li>
-        <li class="navbar__link"><a href="#dividida">nosotros</a></li>
+        <li class="navbar__link"><a href="#dividida__left">nosotros</a></li>
         <li class="navbar__link"><a href="#mision">vision</a></li>
         <li class="navbar__link"><a href="#precursores">multimedia</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
@@ -152,17 +152,16 @@
       </div>
       <!-- flecha abajo -->
       <div class="flecha__abajo">
-        <a href="#dividida">Scroll down<img src="img/scroll.png" alt=""></a>
+        <a href="#dividida__left">Scroll down<img src="img/scroll.png" alt=""></a>
       </div>
-
     </article>
 
 
     <!-- Nosotros-->
     <!-- Pantalla dividida izquierda -->
-    <section class="dividida__left" id="dividida">
+    <section class="dividida__left" id="dividida__left">
       <!-- izquierda -->
-      <div class="left__textoDos" >
+      <div class="left__textoDos">
         <h2 class="left__titulo--dos">Nosotros</h2>
         <h4 class="left__tituloSub--dos">Tristán Suárez ✋🤚</h4>
         <p class="left__parrafo--dos" data-aos="fade-left">
@@ -187,14 +186,12 @@
     </section>
 
     <!-- Pantalla dividida derecha -->
-    <section class="dividida__right">
-      <!-- derecha -->
-
+    <section class="dividida__right" id="dividida_right">
       <!-- contenedor derecha nuestros pastores -->
       <div class="right__imagen--left">
         <p class="right__frase">Pr. Javier Corsi | "Me rindo a su voluntad para ganar"</p>
       </div>
-
+      <!-- derecha -->
       <div class="right__textoDos">
 
         <p class="right__parrafo--dos" data-aos="fade-right">
@@ -209,12 +206,8 @@
           Sólo así se edifica un cuerpo, o mejor dicho, crece un cuerpo, donde la cabeza es Cristo (Efesios 4:15) y se
           establece claramente la delegación de autoridad. Dios nos enseña cómo mantener el cuerpo unido ayudándonos
           unos a otros (Efesios 4:16).
-
         </p>
-
-
       </div>
-
     </section>
 
     <!--Mision y Vision-->
