--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </section>
 
     <!-- Pantalla dividida derecha -->
-    <section class="dividida__right" id="dividida_right">
+    <section class="dividida__right" id="dividida__right">
       <!-- contenedor derecha nuestros pastores -->
       <div class="right__imagen--left">
         <p class="right__frase">Pr. Javier Corsi | "Me rindo a su voluntad para ganar"</p>
