--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!--Main (Principal)-->
     <main class="main" id="main">
 
-      <div class="main__text">
+      <div class="main__text" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
         <h3 class="main__tituloFondo">Iglesia Cristiana El Encuentro</h3>
         <h3 class="main__tituloPre">Iglesia Cristiana</h3>
         <div class="main__linea"></div>
@@ -210,8 +210,13 @@
       </div>
     </section>
 
-    <!--Mision y Vision-->
+    <!--banner-->
+    <div class="banner">
+      <p class="banner__titulo">"No entres en pánico, Dios gobierna en tu tormenta"
+      </p><cite>-Pr. Javier Corsi-</cite>
+    </div>
 
+    <!--Mision y Vision-->
     <section class="mision" id="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
