text shadow title

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="banner">
       <p class="banner__titulo">"No entres en pánico, Dios gobierna en tu tormenta"
       </p><cite>-Pr. Javier Corsi-</cite>
-      <img class="banner__img" src="img/corsi.jpg" alt="">
+      <img class="banner__img" src="img/avatarJavier.png" alt="">
     </div>
 
     <!--Mision y Vision-->
