--- a/index.html
+++ b/index.html
@@ -219,6 +219,19 @@
 
     <!--Mision y Vision-->
     <section class="mision" id="mision">
+      
+      <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#0099ff" fill-opacity="1"
+          d="M0,288L48,261.3C96,235,192,181,288,181.3C384,181,480,235,576,266.7C672,299,768,309,864,277.3C960,245,1056,171,1152,117.3C1248,64,1344,32,1392,16L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+      </svg>
+
+      <svg class="wave__dos" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#000b76" fill-opacity="1"
+          d="M0,32L48,53.3C96,75,192,117,288,149.3C384,181,480,203,576,181.3C672,160,768,96,864,69.3C960,43,1056,53,1152,80C1248,107,1344,149,1392,170.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+      </svg>
+
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">La Visión</h2>
