--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </p>
         <img src="img/collageNuevo.png" alt="">
         <h5 class="t-stroke t-shadow">SOMOS IGLESIA</h5>
-       
+
       </div>
     </section>
 
@@ -394,19 +394,14 @@
             <h2 class="iglesia__cardTitulo">Evangelismo</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
-
             <input type="button" class="iglesia__boton" value="VER MÁS!">
           </div>
         </div>
-
       </div>
-
     </section>
 
     <!--Modal jovenes -->
-
     <div class="popup__container" id="modal">
-
       <div class="popup__card">
         <div class="popup__img"></div>
         <div class="popup__text">
@@ -424,9 +419,7 @@
             <a href="#" class="fa-brands fa-instagram"></a>
             <a href="#" class="fa-brands fa-youtube"></a>
           </div>
-
         </div>
-
         <a href="#iglesiaCardJovenes" class="popupBtn__close">X</a>
       </div>
     </div>
@@ -437,7 +430,6 @@
       <!-- The diagonal area -->
       <div class="container__diagonal"></div>
       <div class="swiper-wrapper">
-
         <div class="swiper-slide">
           <div class="swiper-texto">
             <img src="img/nadia 2.jpg" alt="">
@@ -483,6 +475,21 @@
           </div>
         </div>
 
+        <div class="swiper-slide">
+          <div class="swiper-texto">
+            <img src="img/avatarJavier.png" alt="">
+            <h2>Testimonios 💪</h2>
+            <h3>Javier Corsi</h3>
+            <i class="fa-solid fa-quote-left"></i>
+            <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+              autem. adipisicing elit. Esse, sapiente!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nulla placeat consectetur libero porro
+              voluptatum recusandae perferendis nam atque id?</p>
+            <div class="swiper-footer">
+            </div>
+          </div>
+        </div>
+
 
 
       </div>
@@ -504,7 +511,6 @@
         <h2 class="galeria__titulo">Galeria</h2>
         <h3 class="galeria__subtitulo">imagenes! 😎 </h3>
       </div>
-
 
       <div class="galeria__grid">
         <figure class="galeria__picture galeria__picture--g1">
@@ -559,9 +565,7 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6544.829121977961!2d-58.57231244996859!3d-34.89604461706162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd9c48dc0a621%3A0x5c257f2545c6b7fb!2sIglesia%20Evang%C3%A9lica%20El%20Encuentro!5e0!3m2!1ses-419!2sar!4v1651186701116!5m2!1ses-419!2sar"
           width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
-
       </section>
-
     </section>
 
 
