--- a/index.html
+++ b/index.html
@@ -150,10 +150,11 @@
         </div>
         <p class="article__pie">Palabra Rehma 2022</p>
       </div>
+
       <!-- flecha abajo -->
-      <div class="flecha__abajo">
+      <!-- <div class="flecha__abajo">
         <a href="#dividida__left">Scroll down<img src="img/scroll.png" alt=""></a>
-      </div>
+      </div> -->
     </article>
 
 
@@ -640,7 +641,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Project -->
- 
+
   <script src="scroll.js"></script>
   <script src="main.js"></script>
 
