--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="resetPro.css">
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
+  <!-- Media Querys -->
+  <link rel="stylesheet" href="mediaQuerys.css">
   <!-- patterns -->
   <link href="https://unpkg.com/pattern.css" rel="stylesheet">
   <!-- swiper -->
