--- a/index.html
+++ b/index.html
@@ -427,7 +427,9 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="swiper-texto">
-            <img src="img/nadia 2.jpg" alt="">
+            <div class="swiper-fondoImg">
+              <img class="swiper-imagen" src="img/nadia 2.jpg" alt="">
+            </div>
             <h2>Testimonios 💪</h2>
             <h3>Nadia Saballa</h3>
             <i class="fa-solid fa-quote-left"></i>
@@ -439,7 +441,7 @@
             </div>
           </div>
         </div>
-
+<!-- 
         <div class="swiper-slide">
           <div class="swiper-texto">
             <img src="img/seby.jpg" alt="">
@@ -483,7 +485,7 @@
             <div class="swiper-footer">
             </div>
           </div>
-        </div>
+        </div> -->
 
 
 
