--- a/index.html
+++ b/index.html
@@ -441,10 +441,12 @@
             </div>
           </div>
         </div>
-<!-- 
+
         <div class="swiper-slide">
           <div class="swiper-texto">
+            <div class="swiper-fondoImg">
             <img src="img/seby.jpg" alt="">
+            </div>
             <h2>Testimonios 💪</h2>
             <h3>Sebastian Gallardo</h3>
             <i class="fa-solid fa-quote-left"></i>
@@ -459,7 +461,9 @@
 
         <div class="swiper-slide">
           <div class="swiper-texto">
+            <div class="swiper-fondoImg">
             <img src="img/angelito.png" alt="">
+            </div>
             <h2>Testimonios 💪</h2>
             <h3>Angel Sayago</h3>
             <i class="fa-solid fa-quote-left"></i>
@@ -474,7 +478,9 @@
 
         <div class="swiper-slide">
           <div class="swiper-texto">
+            <div class="swiper-fondoImg">
             <img src="img/avatarJavier.png" alt="">
+            </div>
             <h2>Testimonios 💪</h2>
             <h3>Javier Corsi</h3>
             <i class="fa-solid fa-quote-left"></i>
@@ -485,7 +491,7 @@
             <div class="swiper-footer">
             </div>
           </div>
-        </div> -->
+        </div>
 
 
 
