--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         <div class="swiper-slide">
           <div class="swiper-texto">
             <div class="swiper-fondoImg">
-            <img src="img/seby.jpg" alt="">
+            <img class="swiper-imagen" src="img/seby.jpg" alt="">
             </div>
             <h2>Testimonios 💪</h2>
             <h3>Sebastian Gallardo</h3>
@@ -462,7 +462,7 @@
         <div class="swiper-slide">
           <div class="swiper-texto">
             <div class="swiper-fondoImg">
-            <img src="img/angelito.png" alt="">
+            <img class="swiper-imagen" src="img/angelito.png" alt="">
             </div>
             <h2>Testimonios 💪</h2>
             <h3>Angel Sayago</h3>
@@ -479,7 +479,7 @@
         <div class="swiper-slide">
           <div class="swiper-texto">
             <div class="swiper-fondoImg">
-            <img src="img/avatarJavier.png" alt="">
+            <img class="swiper-imagen" src="img/avatarJavier.png" alt="">
             </div>
             <h2>Testimonios 💪</h2>
             <h3>Javier Corsi</h3>
