--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
       </ul>
 
       <!--SEGUINOS-->
-
       <div class="navbar__social">
-        <a href="#" class="fa-brands fa-facebook"></a>
-        <a href="#" class="fa-brands fa-instagram"></a>
-        <a href="#" class="fa-brands fa-youtube"></a>
-
+        <a href="https://www.facebook.com/iglesiaelencuentrotristansuarez" target="_blank"
+          class="fa-brands fa-facebook"></a>
+        <a href="https://www.instagram.com/elencuentrosuarez/" target="_blank" class="fa-brands fa-instagram"></a>
+        <a href="https://www.youtube.com/channel/UCe3bVhfZwy2gGYxdCHOCVkQ" target="_blank"
+          class="fa-brands fa-youtube"></a>
       </div>
 
 
@@ -122,7 +122,6 @@
     </button>
 
     <!--Rehma-->
-
     <article class="article" id="rehma">
       <!-- Card -->
       <div class="article__card">
@@ -130,11 +129,11 @@
           <path fill="rgba(218, 224, 230, 1)"
             d="M 0 325 L -11.428571462631226 373.4285583496094 L -11.428571462631226 0 L 0 0 Z" stroke-width="0">
           </path>
+
           <path fill="rgba(218, 224, 230, 1)"
             d="M -12.428571462631226 373.4285583496094 L 402 0 L 402 0 L -12.428571462631226 0 Z" stroke-width="0">
           </path>
         </svg>
-
 
         <div class="article__texto" data-aos="fade-right" id="rehma-texto">
           <blockquote cite="https://www.bible.com/es/bible/128/JOS.1.NVI">
@@ -152,11 +151,6 @@
         </div>
         <p class="article__pie">Palabra Rehma 2022</p>
       </div>
-
-      <!-- flecha abajo -->
-      <!-- <div class="flecha__abajo">
-        <a href="#dividida__left">Scroll down<img src="img/scroll.png" alt=""></a>
-      </div> -->
     </article>
 
 
@@ -410,8 +404,9 @@
           </p>
 
           <div class="popup__social">
-            <a href="#" class="fa-brands fa-facebook"></a>
-            <a href="#" class="fa-brands fa-instagram"></a>
+            <a href="https://www.facebook.com/iglesiaelencuentrotristansuarez" target="_blank"
+              class="fa-brands fa-facebook"></a>
+            <a href="https://www.instagram.com/jovenes.ts/" target="_blank" class="fa-brands fa-instagram"></a>
             <a href="#" class="fa-brands fa-youtube"></a>
           </div>
         </div>
@@ -445,7 +440,7 @@
         <div class="swiper-slide">
           <div class="swiper-texto">
             <div class="swiper-fondoImg">
-            <img class="swiper-imagen" src="img/seby.jpg" alt="">
+              <img class="swiper-imagen" src="img/seby.jpg" alt="">
             </div>
             <h2>Testimonios 💪</h2>
             <h3>Sebastian Gallardo</h3>
@@ -462,7 +457,7 @@
         <div class="swiper-slide">
           <div class="swiper-texto">
             <div class="swiper-fondoImg">
-            <img class="swiper-imagen" src="img/angelito.png" alt="">
+              <img class="swiper-imagen" src="img/angelito.png" alt="">
             </div>
             <h2>Testimonios 💪</h2>
             <h3>Angel Sayago</h3>
@@ -479,7 +474,7 @@
         <div class="swiper-slide">
           <div class="swiper-texto">
             <div class="swiper-fondoImg">
-            <img class="swiper-imagen" src="img/avatarJavier.png" alt="">
+              <img class="swiper-imagen" src="img/avatarJavier.png" alt="">
             </div>
             <h2>Testimonios 💪</h2>
             <h3>Javier Corsi</h3>
@@ -618,11 +613,13 @@
         <div class="footer__texto2">
           <h2 class="footer__titulo2">SEGUINOS</h2>
           <div class="footer__social">
-            <a href="#" class="fa-brands fa-facebook"></a>
-            <a href="#" class="fa-brands fa-instagram"></a>
-            <a href="#" class="fa-brands fa-youtube"></a>
-
+            <a href="https://www.facebook.com/iglesiaelencuentrotristansuarez" target="_blank"
+              class="fa-brands fa-facebook"></a>
+            <a href="https://www.instagram.com/elencuentrosuarez/" target="_blank" class="fa-brands fa-instagram"></a>
+            <a href="https://www.youtube.com/channel/UCe3bVhfZwy2gGYxdCHOCVkQ" target="_blank"
+              class="fa-brands fa-youtube"></a>
           </div>
+
 
         </div>
 
