--- a/index.html
+++ b/index.html
@@ -395,12 +395,13 @@
         <div class="popup__img"></div>
         <div class="popup__text">
           <h2>Ministerio Jovenes</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ratione quidem sequi dolores, mollitia
-            sed
-            nihil vitae atque blanditiis dolore vero voluptatum placeat tempore aliquam veniam vel deleniti
-            praesentium
-            quia maiores reiciendis. Culpa maxime minus, tempore architecto, autem eligendi quia accusamus ipsa,
-            similique itaque eos quos!
+          <p>Un espacio donde cientos de chicos y chicas descubren su propósito divino para nunca más soltarlo.
+            Cada sábado nos juntamos para acercarnos al corazón de nuestro Creador; para disfrutar de amistades que
+            sacan lo mejor de nosotros, para soñar, reír y llorar juntos. Anhelamos que cada joven descubra el potencial
+            que Dios depósito en él, que sueñe en grande y que deje huella en nuestra sociedad.
+            Somos jóvenes con propósito, que desarrollan su potencial, predican a Jesús y sirven a los demás. <br>
+            <strong> Horario de reunion:</strong>
+            Todos los sábados a las 20hs.
           </p>
 
           <div class="popup__social">
@@ -547,7 +548,6 @@
 
 
     <!--Formulario-->
-
     <section class="form">
       <form action="https://formspree.io/f/mbjwgkgl" method="POST" class="form__contenedor" id="form">
         <h2 class="form__titulo">Contacto 📧 </h2>
