--- a/index.html
+++ b/index.html
@@ -16,22 +16,17 @@
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <!--Reset Pro-->
+  <!-- Reset Pro-->
   <link rel="stylesheet" href="resetPro.css">
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
   <!-- Media Querys -->
   <link rel="stylesheet" href="mediaQuerys.css">
-  <!-- patterns -->
+  <!-- Patterns -->
   <link href="https://unpkg.com/pattern.css" rel="stylesheet">
-  <!-- swiper -->
+  <!-- Swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-
-  <!-- Custom Styles Media Querys -->
-  <!-- <link rel="stylesheet" href="mediaQuerys.css"> -->
-
-  <!--aos js. -->
-
+  <!-- Aos js. -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -39,9 +34,40 @@
 
   <!--Preloader-->
   <div class="loader__contenedor">
-    <div class="loader__texto">
-      <span>EL LUGAR DE TU ENCUENTRO CON DIOS!</span>
+    <div class="loader__conjunto">
+      <div class="elemento__1">
+        <i class="fa-solid fa-arrow-down-long"></i>
+      </div>
+
+      <div class="elemento__2">
+        <span class="vertical"></span>
+        <span class="horizontal"></span>
+      </div>
+
+      <div class="elemento__3">
+        <span class="circulo__1"></span>
+        <span class="circulo__2"></span>
+
+      </div>
+
+      <div class="elemento__4">
+        <i class="fa-solid fa-arrow-down-long"></i>
+      </div>
+
+      <div class="elemento__5">
+        <i class="fa-solid fa-arrow-down-long"></i>
+      </div>
+
+      <div class="elemento__texto">
+        <h1 class="elemento__titulo">
+          "ESPERANDO AL QUE HA DE VENIR"
+        </h1>
+      </div>
+      
     </div>
+
+ 
+
   </div>
 
   <!--contenedor general-->
