--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
 
       <!-- Precursores -->
       <div class="aside__texto">
-        <i class="fa-solid fa-headphones-simple"></i>
+        <!-- <i class="fa-solid fa-headphones-simple"></i> -->
         <h2 class="aside__titulo">Precursores</h2>
-        <h3 class="aside__subtitulo">escuchalos! 🎹 </h3>
+        <h3 class="aside__subtitulo">escuchalos!  🎹 </h3>
         <div class="aside__btn">
           <a href="precursores.html">
             <input type="button" value="VER MÁS">
@@ -296,9 +296,9 @@
 
       <!-- Podcast -->
       <div class="aside__texto2">
-        <i class="fa-solid fa-microphone-lines"></i>
+        <!-- <i class="fa-solid fa-microphone-lines"></i> -->
         <h2 class="aside__titulo2">Podcast</h2>
-        <h3 class="aside__subtitulo2">escuchalos! 🎧 </h3>
+        <h3 class="aside__subtitulo2">escuchalos!  🎧 </h3>
         <div class="aside__btn">
           <a href="podcast.html">
             <input type="button" value="VER MÁS">
@@ -308,9 +308,9 @@
 
       <!-- Reuniones -->
       <div class="aside__texto3">
-        <i class="fa-solid fa-dove"></i>
+        <!-- <i class="fa-solid fa-dove"></i> -->
         <h2 class="aside__titulo3">Reuniones</h2>
-        <h3 class="aside__subtitulo3">miralas! 👇 </h3>
+        <h3 class="aside__subtitulo3">miralas!  👇 </h3>
         <div class="aside__btn">
           <a href="reuniones.html">
             <input type="button" value="VER MÁS">
