--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           "ESPERANDO AL QUE HA DE VENIR"
         </h1>
       </div>
-      
+
     </div>
 
- 
+
 
   </div>
 
@@ -244,7 +244,7 @@
     <section class="mision" id="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-        <h2 class="mision__titulo">La Visión</h2>
+        <h2 class="mision__titulo">Misión y Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo" data-aos="fade-left">
           Una Iglesia que abrigue a todos los que se acerquen a ella con un fuerte y anifiesto interés en el área
@@ -286,7 +286,7 @@
       <div class="aside__texto">
         <!-- <i class="fa-solid fa-headphones-simple"></i> -->
         <h2 class="aside__titulo">Precursores</h2>
-        <h3 class="aside__subtitulo">escuchalos!  🎹 </h3>
+        <h3 class="aside__subtitulo">escuchalos! 🎹 </h3>
         <div class="aside__btn">
           <a href="precursores.html">
             <input type="button" value="VER MÁS">
@@ -298,7 +298,7 @@
       <div class="aside__texto2">
         <!-- <i class="fa-solid fa-microphone-lines"></i> -->
         <h2 class="aside__titulo2">Podcast</h2>
-        <h3 class="aside__subtitulo2">escuchalos!  🎧 </h3>
+        <h3 class="aside__subtitulo2">escuchalos! 🎧 </h3>
         <div class="aside__btn">
           <a href="podcast.html">
             <input type="button" value="VER MÁS">
@@ -310,7 +310,7 @@
       <div class="aside__texto3">
         <!-- <i class="fa-solid fa-dove"></i> -->
         <h2 class="aside__titulo3">Reuniones</h2>
-        <h3 class="aside__subtitulo3">miralas!  👇 </h3>
+        <h3 class="aside__subtitulo3">miralas! 👇 </h3>
         <div class="aside__btn">
           <a href="reuniones.html">
             <input type="button" value="VER MÁS">
@@ -373,12 +373,12 @@
           </div>
         </div>
 
-        <!--Card matrimonios-->
+        <!--Card matrimonios adultos-->
         <div class="iglesia__card" data-aos="zoom-in">
-          <div class="iglesia__imagen iglesia__imagen--matrimonios">
+          <div class="iglesia__imagen iglesia__imagen--matrimoniosGrandes">
           </div>
           <div class="iglesia__cardTexto">
-            <h2 class="iglesia__cardTitulo">Matrimonios</h2>
+            <h2 class="iglesia__cardTitulo">Matrimonios grandes</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -387,12 +387,12 @@
         </div>
 
 
-        <!--Card Alabanza y adoracion-->
+        <!--Card Matrimonios jovenes-->
         <div class="iglesia__card" data-aos="zoom-in">
-          <div class="iglesia__imagen iglesia__imagen--alabanza">
+          <div class="iglesia__imagen iglesia__imagen--matrimoniosJovenes">
           </div>
           <div class="iglesia__cardTexto">
-            <h2 class="iglesia__cardTitulo">Alabanza</h2>
+            <h2 class="iglesia__cardTitulo">Matrimonios jovenes</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -400,18 +400,6 @@
           </div>
         </div>
 
-
-        <!--Card Evangelismo-->
-        <div class="iglesia__card" data-aos="zoom-in">
-          <div class="iglesia__imagen iglesia__imagen--evangelismo">
-          </div>
-          <div class="iglesia__cardTexto">
-            <h2 class="iglesia__cardTitulo">Evangelismo</h2>
-            <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
-              servicio. </p>
-            <input type="button" class="iglesia__boton" value="VER MÁS!">
-          </div>
-        </div>
       </div>
     </section>
 
@@ -440,6 +428,18 @@
         <a href="#iglesiaCardJovenes" class="popupBtn__close">X</a>
       </div>
     </div>
+
+    <!-- Cuarto de oracion -->
+    <div class="cuarto">
+      <h2 class="cuarto__titulo">Cuarto de adoración e interseción</h2>
+      <div class="cuarto__btn">
+        <a href="reuniones.html">
+          <input type="button" value="ENTRAR!">
+        </a>
+      </div>
+      
+    </div>
+
 
     <!-- Testimonios -->
     <!-- Swiper -->
