--- a/index.html
+++ b/index.html
@@ -431,7 +431,8 @@
 
     <!-- Cuarto de oracion -->
     <div class="cuarto">
-      <h2 class="cuarto__titulo">Cuarto de adoración e interseción</h2>
+      <h2 class="cuarto__titulo">Cuarto de Adoración e Intercesión</h2>
+      <p class="cuarto__parrafo">Bienvenidos! Gracias por ser parte de este movimiento global que está despertando y activando a la Iglesia</p>
       <div class="cuarto__btn">
         <a href="reuniones.html">
           <input type="button" value="ENTRAR!">
