--- a/index.html
+++ b/index.html
@@ -431,10 +431,11 @@
 
     <!-- Cuarto de oracion -->
     <div class="cuarto">
+      <i class="fa-solid fa-lightbulb"></i>
       <h2 class="cuarto__titulo">Cuarto de Adoración e Intercesión</h2>
       <p class="cuarto__parrafo">Bienvenidos! Gracias por ser parte de este movimiento global que está despertando y activando a la Iglesia</p>
       <div class="cuarto__btn">
-        <a href="reuniones.html">
+        <a href="cuarto.html">
           <input type="button" value="ENTRAR!">
         </a>
       </div>
