--- a/cuarto.html
+++ b/cuarto.html
@@ -22,9 +22,6 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="cuarto.css">
 
-    <!-- Custom Styles Media Querys -->
-    <link rel="stylesheet" href="mediaQuerys.css">
-
     <!--aos js. -->
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -74,6 +71,7 @@
         <!-- Cuarto-->
         <div class="cuarto__contenedor" id="cuarto">
             <div class="cuarto__texto">
+                <i class="fa-solid fa-lightbulb"></i>
                 <h2 class="cuarto__titulo">Cuarto de Adoración e Intercesión</h2>
                 <h3 class="cuarto__subtitulo">Bienvenidos!</h3>
                 <p class="cuarto__parrafo">
@@ -82,63 +80,15 @@
             </div>
         </div>
 
-        <!-- Testimonios -->
-        <!-- Swiper -->
-        <div class="swiper mySwiper" id="cuarto">
-            <!-- The diagonal area -->
-            <div class="container__diagonal"></div>
-            <div class="swiper-wrapper">
+        <!-- Section -->
+        <section class="contenido">
+            <div class="contenido__texto">
+                <h2 class="contenido__titulo">
 
-                <div class="swiper-slide">
-                    <div class="swiper-texto">
-                        <div class="swiper-fondoImg">
-                        </div>
-                        <h2>Bienvenidos 💪</h2>
-
-                        <p>Te animo a que seas parte de esta generación que siendo llenos por el Espiritu Santo claman
-                            dia y noche, apasionados por ver a Jesus regresar y gobernar en las naciones desde
-                            Jerusalen.
-                            Este clamor es cada vez mas intenso y va en aumento. No pararemos de cantar y adorar HASTA
-                            que EL venga.
-                        </p>
-                        <div class="swiper-footer">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="swiper-slide">
-                    <div class="swiper-texto">
-                        <div class="swiper-fondoImg">
-                        </div>
-                        <h2>Bienvenidos 💪</h2>
-
-                        <p>Te animo a que seas parte de esta generación que siendo llenos por el Espiritu Santo claman
-                            dia y noche, apasionados por ver a Jesus regresar y gobernar en las naciones desde
-                            Jerusalen.
-                            Este clamor es cada vez mas intenso y va en aumento. No pararemos de cantar y adorar HASTA
-                            que EL venga.
-                        </p>
-                        <div class="swiper-footer">
-                        </div>
-                    </div>
-                </div>
-                
+                </h2>
             </div>
 
-
-
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
-
-        </div>
-
-
-
-
-
-
-
+        </section>
 
 
         <footer class="footer" id="contacto">
@@ -146,7 +96,19 @@
                 <small>&copy; <strong>2022 sebygalla</strong> -Todos los derechos reservados </small>
             </div>
         </footer>
+
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- fontawesome -->
@@ -155,13 +117,15 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Project -->
+
+    <script src="scroll.js"></script>
     <script src="main.js"></script>
+
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-
 
 </body>
 
